Done work with 'XMLHttpRequest'

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
 
-
+<div class="wrapper">
+    <select name="cars" id="cars" class="cars">
+        <option value="no">Выберите модель</option>
+        <option value="bmw">BMW</option>
+        <option value="volvo">Volvo</option>
+        <option value="moskvich">Москвич</option>
+    </select>
+</div>
+<div class="output"></div>
 
 <script src="scripts.js"></script>
 </body>
