--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 
 <div class="wrapper">
-    <select name="cars" id="cars" class="cars">
-        <option value="no">Выберите модель</option>
-        <option value="bmw">BMW</option>
-        <option value="volvo">Volvo</option>
-        <option value="moskvich">Москвич</option>
-    </select>
+    <form action="">
+        <input type="text" name="user" placeholder="Enter Your Name">
+        <input type="email" name="email" placeholder="Enter Your Email">
+        <input type="submit" value="Subscribe">
+    </form>
+
+    <div class="message"></div>
 </div>
-<div class="output"></div>
 
 <script src="scripts.js"></script>
 </body>
